name:                warp-letsencrypt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snoyberg/warp-letsencrypt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Warp.LetsEncrypt
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , warp-tls
                     , http-types
                     , classy-prelude
                     , typed-process
                     , temporary
                     , directory
                     , wai-extra
                     , mime-types
  default-language:    Haskell2010

executable warp-letsencrypt-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp-letsencrypt
                     , wai
                     , http-types
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoyberg/warp-letsencrypt
